--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
             <version>2.11.1</version>
         </dependency>
 
+        <!-- Redisson依赖 -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.17.6</version>
+        </dependency>
+
         <!-- lombok依赖 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
