--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     port: 6379
     password:
     database: 0
+    redisson:
+      file: classpath:redisson-single.yml
     jedis:
       pool:
         max-active: 150
